# video-script-tool

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.spec  core.py  run.bat
tests/: test_core.py
video_script_tool_oss/: CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  README_zh.md  app.py  build_exe.bat  build_onefile.bat  cli.py  pyproject.toml
